# fractal_python

./: .bandit  .deepsource.toml  .pre-commit-config.yaml  .prospector.yaml  .pyup.yml  .readthedocs.yml  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.rst  SECURITY.md  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: codeql-analysis.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
fractal_python/: __init__.py  api_client.py  bank_data.py  company.py  forecasting.py
fractal_python/bank_data/: __init__.py  accounts.py  api.py  banks.py
fractal_python/banking/: __init__.py  accounts.py  api.py  banks.py  categories.py  merchants.py
tests/: __init__.py  test_api_client.py  test_bank_data.py  test_categories.py  test_company.py  test_forecasting.py  test_fractal_python.py  test_merchants.py
