[metadata]
name = fractal_python
long_description = file: README.rst
long_description_content_type = text/x-rst
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython

[options]
python_requires = >=3.6

[bumpversion]
current_version = 0.1.0
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:fractal_python/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bdist_wheel]
universal = 1

[flake8]
exclude = docs
max-line-length = 88
extend-ignore = E203, W503
per-file-ignores = __init__.py:F401

[aliases]
test = pytest

[isort]
profile = black

[bandit]
exclude = /tests

[darglint]
docstring_style = sphinx
